# Weather-Cli

./: Cargo.toml  README.md
src/: main.rs
