[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] } #CLI Parsing
dotenvy="0.15" #Environment Variables
reqwest = { version = "0.11", features = ["json", "blocking"] } # Requests
tokio = { version = "1", features = ["full"] } # Needed for async
serde = { version = "1.0", features = ["derive"] }# Needed for JSON parsing
serde_json = "1.0" #JSON Handlings
colored = "2.0" #For Colored Outputs